// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus005OnBoardEvent {
extensions 6 to 106;

  optional ccsds_mal.protobuf.UINTEGER reportId = 1;
  optional ccsds_mal.protobuf.UINTEGER onBoardStatus = 2;
  optional ccsds_mal.protobuf.STRING alarmLevel = 3;
  optional pusGroundModel.protobuf.PusElement pusElement = 4;
  optional ccsds_mal.protobuf.STRING reportIdLabel = 5;
}
